[package]
name = "atc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "^0.5.6"
ggez = "^0.6.1"

# WSG84
nav-types = "^0.5.1"
# Formatting coordinates
recoord = { version = "^0.2.6", features = ["format_dms"] }

# Sim integration
msfs = "^0.1.0"

# Text to speech, TODO: find better crate
# tts = "^0.20"
