[package]
name = "atc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
mint = "^0.5.6"
ggez = "^0.6.1"

# WSG84
geographiclib-rs = "^0.2.1"

# Sim integration
# msfs = "^0.1.0"
msfs = { path = "lib/msfs-rs/msfs" }

# Text to speech, TODO: find better crate
# tts = "^0.20"

[dev-dependencies]