[package]
name = "dms-coordinates"
version = "1.1.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to handle D°M'S'' coordinates"
homepage = "https://github.com/gwbres/dms-coordinates"
keywords = ["positionning", ]
categories = ["science",]
edition = "2018"
readme = "README.md"

[features]

[dependencies]
thiserror = "1"

[test-dependencies]
assert_float_eq = "1.1.3"
